# gnome-workflowy

./: .editorconfig  gnome-workflowy.in  meson.build
data/: gnome-workflowy.gresource.xml  meson.build
data/ui/: day.ui  signin.ui  titlebar.ui
workflowy/: api.py  application.py  signin.py  utils.py  weekview.py  window.py  workflowy.py
